--- a/index.html
+++ b/index.html
@@ -9,42 +9,50 @@
 </head>
 
 <body>
-
-    <table>
-        <tr>
-            <th>Month</th>
-            <th>Day</th>
-            <th>Year</th>
-        </tr>
-        <tr>
-            <td>January</td>
-            <td>9th</td>
-            <td>2020</td>
-        </tr>
-    </table>
-
-    <a href="https://www.youtube.com/watch?v=y5gnlPTXGB4">Gordon Ramsey being served the worst steaks in the world</a>
-
-    <hr>
-
-    <div>
-        <h1>Endless Summer</h1>
-        <p>Two surfers travel to iconic surf spots around the world in a bid to fill an entire year with summer.</p>
-        <img src="https://www.bing.com/th/id/OIP.dwz-6z9kelGgjrXAGhmlEgHaLI?w=184&h=276&c=7&o=5&pid=1.7" alt="">
-        <ul>
-            <li>Mike Hynson</li>
-            <li>Robert August</li>
-        </ul>
-        <ul>
-            <li>Release: June 15, 1966</li>
-            <li>Budget: $50k</li>
-            <li>Box Office: $20m</li>
-        </ul>
-
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/yZsuQXKkPdw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
-
     <div style="padding:2%;">
+
+        <!-- table of every day I worked on this project. -->
+        <table>
+            <tr>
+                <th>Month</th>
+                <th>Day</th>
+                <th>Year</th>
+            </tr>
+            <tr>
+                <td>January</td>
+                <td>9th</td>
+                <td>2020</td>
+            </tr>
+        </table>
+
+        <!-- funny youtube video. -->
+        <a href="https://www.youtube.com/watch?v=y5gnlPTXGB4">Gordon Ramsey being served the worst steaks in the
+            world</a>
+
+        <!-- horizontal rule. -->
+        <hr>
+
+        <!-- my favorite movie. -->
+        <div>
+            <h1>Endless Summer</h1>
+            <p>Two surfers travel to iconic surf spots around the world in a bid to fill an entire year with summer.</p>
+            <img src="https://www.bing.com/th/id/OIP.dwz-6z9kelGgjrXAGhmlEgHaLI?w=184&h=276&c=7&o=5&pid=1.7" alt="">
+            <ul>
+                <li>Mike Hynson</li>
+                <li>Robert August</li>
+            </ul>
+            <ul>
+                <li>Release: June 15, 1966</li>
+                <li>Budget: $50k</li>
+                <li>Box Office: $20m</li>
+            </ul>
+
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/yZsuQXKkPdw" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
+
+        <!-- basic form for name and email. -->
         <form action="">
             First: <input type="text" name="firstName" placeholder="First Name">
             Last: <input type="text" name="lastName" placeholder="Last Name">
@@ -52,8 +60,8 @@
             <input type="submit" value="Submit">
         </form>
 
+        <!-- section 1. bay owl. most important section gets the biggest header. -->
         <section>
-            <!-- section 1. bay owl. most important section gets the biggest header. -->
             <h1>supersized</h1>
             <p>I am a student in Innovate Birmingham. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
                 officia reiciendis vel saepe odio, consequuntur sunt nulla ab quibusdam. Similique modi esse eligendi,
@@ -63,13 +71,16 @@
                 <li>two</li>
                 <li>three</li>
             </ul>
-            <a href=https://tse1.mm.bing.net/th/id/OET.d2d0a67e8e5a4d7a99a6f9b8feaef46f?w=272&h=272&c=7&rs=1&o=5&pid=1.9" target="_blank"><img src="https://tse1.mm.bing.net/th/id/OET.d2d0a67e8e5a4d7a99a6f9b8feaef46f?w=272&h=272&c=7&rs=1&o=5&pid=1.9" alt=""></a>
+            <a href=https://tse1.mm.bing.net/th/id/OET.d2d0a67e8e5a4d7a99a6f9b8feaef46f?w=272&h=272&c=7&rs=1&o=5&pid=1.9"
+                target="_blank"><img
+                    src="https://tse1.mm.bing.net/th/id/OET.d2d0a67e8e5a4d7a99a6f9b8feaef46f?w=272&h=272&c=7&rs=1&o=5&pid=1.9"
+                    alt=""></a>
         </section>
 
         <hr>
 
+        <!-- section 2. llama. most important section gets the biggest header. -->
         <section>
-            <!-- section 2. llama. most important section gets the biggest header. -->
             <h2>biggie fry</h2>
             <p>My name is Nick. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores deserunt cupiditate
                 neque praesentium, id assumenda error minus eos. At, odio nihil quidem sunt mollitia ratione deserunt
@@ -79,14 +90,16 @@
                 <li>green</li>
                 <li>blue</li>
             </ul>
-            <a href="https://tse1.mm.bing.net/th/id/OET.446a23e466d04452acdf6e9547142c6b?w=135&h=272&c=7&rs=1&o=5&pid=1.9" target="_blank"><img src="https://tse1.mm.bing.net/th/id/OET.446a23e466d04452acdf6e9547142c6b?w=135&h=272&c=7&rs=1&o=5&pid=1.9"
-                alt=""></a>
+            <a href="https://tse1.mm.bing.net/th/id/OET.446a23e466d04452acdf6e9547142c6b?w=135&h=272&c=7&rs=1&o=5&pid=1.9"
+                target="_blank"><img
+                    src="https://tse1.mm.bing.net/th/id/OET.446a23e466d04452acdf6e9547142c6b?w=135&h=272&c=7&rs=1&o=5&pid=1.9"
+                    alt=""></a>
         </section>
 
         <hr>
 
+        <!-- section 3. mountain gorilla. -->
         <section>
-            <!-- section 3. mountain gorilla. -->
             <h3>this isn't funny</h3>
             <p>HTML is fun. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae ab quasi libero voluptatibus
                 voluptate praesentium necessitatibus eaque consequuntur. Perspiciatis explicabo quaerat neque nulla
@@ -96,14 +109,16 @@
                 <li>better</li>
                 <li>best</li>
             </ul>
-            <a href="https://tse1.mm.bing.net/th/id/OET.be1bfcf01a534d0d9a01b0faf74a0b8c?w=135&h=272&c=7&rs=1&o=5&pid=1.9" target="_blank"><img src="https://tse1.mm.bing.net/th/id/OET.be1bfcf01a534d0d9a01b0faf74a0b8c?w=135&h=272&c=7&rs=1&o=5&pid=1.9"
-                alt=""></a>
+            <a href="https://tse1.mm.bing.net/th/id/OET.be1bfcf01a534d0d9a01b0faf74a0b8c?w=135&h=272&c=7&rs=1&o=5&pid=1.9"
+                target="_blank"><img
+                    src="https://tse1.mm.bing.net/th/id/OET.be1bfcf01a534d0d9a01b0faf74a0b8c?w=135&h=272&c=7&rs=1&o=5&pid=1.9"
+                    alt=""></a>
         </section>
 
         <hr>
 
+        <!-- section 4. donkey. -->
         <section>
-            <!-- section 4. donkey. -->
             <h4>neither is this</h4>
             <p>CSS is more fun. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non voluptatum dolorem animi
                 ratione quisquam similique aperiam cum? Autem, delectus deserunt. DONKEH.</p>
@@ -112,12 +127,14 @@
                 <li>worse</li>
                 <li>worst</li>
             </ul>
-            <a href="https://tse1.mm.bing.net/th/id/OET.f9c2817544074ed19a34ff83140e6c67?w=272&h=135&c=7&rs=1&o=5&pid=1.9" target="_blank"><img src="https://tse1.mm.bing.net/th/id/OET.f9c2817544074ed19a34ff83140e6c67?w=272&h=135&c=7&rs=1&o=5&pid=1.9"
-                alt=""></a>
+            <a href="https://tse1.mm.bing.net/th/id/OET.f9c2817544074ed19a34ff83140e6c67?w=272&h=135&c=7&rs=1&o=5&pid=1.9"
+                target="_blank"><img
+                    src="https://tse1.mm.bing.net/th/id/OET.f9c2817544074ed19a34ff83140e6c67?w=272&h=135&c=7&rs=1&o=5&pid=1.9"
+                    alt=""></a>
         </section>
 
+        <!-- section 5. chameleon. -->
         <section>
-            <!-- section 5. chameleon. -->
             <h5>this lizard freaks me out</h5>
             <p>Don't read this. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur dolorem
                 reprehenderit impedit veniam, sequi recusandae?</p>
@@ -126,14 +143,16 @@
                 <li>turkey</li>
                 <li>duck</li>
             </ul>
-            <a href="https://tse1.mm.bing.net/th/id/OET.4506c9a5a119474c815438b8bf1d474d?w=272&h=135&c=7&rs=1&o=5&pid=1.9" target="_blank"><img src="https://tse1.mm.bing.net/th/id/OET.4506c9a5a119474c815438b8bf1d474d?w=272&h=135&c=7&rs=1&o=5&pid=1.9"
-                alt=""></a>
+            <a href="https://tse1.mm.bing.net/th/id/OET.4506c9a5a119474c815438b8bf1d474d?w=272&h=135&c=7&rs=1&o=5&pid=1.9"
+                target="_blank"><img
+                    src="https://tse1.mm.bing.net/th/id/OET.4506c9a5a119474c815438b8bf1d474d?w=272&h=135&c=7&rs=1&o=5&pid=1.9"
+                    alt=""></a>
         </section>
 
         <hr>
 
+        <!-- section 6. new zealand glaciers (not an animal). -->
         <section>
-            <!-- section 6. new zealand glaciers (not an animal). -->
             <h6>not even an animal</h6>
             <p>Ignore this text. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, aspernatur? Not an
                 animal.</p>
@@ -142,12 +161,15 @@
                 <li>pork</li>
                 <li>pig</li>
             </ul>
-            <a href="https://tse1.mm.bing.net/th/id/OET.0c76a042f48b409bb705aec679846309?w=272&h=272&c=7&rs=1&o=5&pid=1.9" target="_blank"><img src="https://tse1.mm.bing.net/th/id/OET.0c76a042f48b409bb705aec679846309?w=272&h=272&c=7&rs=1&o=5&pid=1.9"
-                alt=""></a>
+            <a href="https://tse1.mm.bing.net/th/id/OET.0c76a042f48b409bb705aec679846309?w=272&h=272&c=7&rs=1&o=5&pid=1.9"
+                target="_blank"><img
+                    src="https://tse1.mm.bing.net/th/id/OET.0c76a042f48b409bb705aec679846309?w=272&h=272&c=7&rs=1&o=5&pid=1.9"
+                    alt=""></a>
         </section>
 
         <hr>
 
+        <!-- lists. -->
         <section>
             <p>I am excited to learn about:</p>
             <ol>
