properly added form labels to index.html.

--- a/index.html
+++ b/index.html
@@ -54,9 +54,12 @@
 
         <!-- basic form for name and email. -->
         <form action="">
-            First: <input type="text" name="firstName" placeholder="First Name">
-            Last: <input type="text" name="lastName" placeholder="Last Name">
-            Email: <input type="text" name="email" placeholder="Email Address">
+            <label for="firstName">First:</label>
+            <input type="text" name="firstName" placeholder="First Name">
+            <label for="lastName">Last:</label>
+            <input type="text" name="lastName" placeholder="Last Name">
+            <label for="email">Email:</label>
+            <input type="text" name="email" placeholder="Email Address">
             <input type="submit" value="Submit">
         </form>
 
