added new day to 'change log' table.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
                 <td>9th</td>
                 <td>2020</td>
             </tr>
+            <tr>
+                <td>January</td>
+                <td>10th</td>
+                <td>2020</td>
+            </tr>
         </table>
 
         <!-- funny youtube video. -->
